✨ 코드 개선/ 과제

--- a/src/2week/index.html
+++ b/src/2week/index.html
@@ -15,7 +15,12 @@
     <h1>FECrash 카페</h1>
     <div class="carts">
       <span class="icons"><i class="shopping-cart"></i></span>
-      <span class="total-price">0원</span>
+      <div>
+        <img class='free-icon' src='../2week/assets/image/svg/free.svg' alt='freeIcon'/>
+        <span class="total-price">0원</span>
+        <span class="tax-price">0원</span>
+      </div>
+      
     </div>
 
     <div class="clear"></div>
